--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top">
-      <a class="navbar-brand" href="#"><img src="images/logo-135x47.png" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a class="nav-link"  href="#home">Home <span class="sr-only">(current)</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About Us</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#work">Terms &amp; Conditions</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#clients">Contact</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#news">Sign In</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#contacts">Sign Up</a> </li>    
-        </ul>
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="images/logo-135x47.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active"><a class="nav-link"  href="#home">Home <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#about">About Us</a> </li>
+            <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a> </li>
+            <li class="nav-item"><a class="nav-link" href="#work">Terms &amp; Conditions</a> </li>
+            <li class="nav-item"><a class="nav-link" href="#clients">Contact</a> </li>
+            <li class="nav-item"><a class="nav-link" href="#news">Sign In</a> </li>
+            <li class="nav-item"><a class="nav-link" href="#contacts">Sign Up</a> </li>    
+          </ul>
+        </div>
       </div>  
     </nav>
     <!-- /header -->
@@ -48,15 +50,15 @@
       </div> 
     </section>
     <!-- Banner End -->
-    <section class="bg-gray-img-1">
+    <section class="bg-gray-img-1" id="about">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-sm-7 fadeInLeftSmall animated">
+          <div class="col-lg-7 col-sm-12 order-2 order-sm-12 fadeInLeftSmall animated">
             <h2 class="primary-color">Intelligent Cloud Accounting <span>Software</span></h2>
             <p class="mt-3">CodeIT Softwares Ltd. is a multi-skilled software service provider with a highly competent workforce and across the globe presence. With years of perfected expertise in cross-platform skills and quality-integrated methodologies, CodeIT adopts a competent global delivery model in providing value-based solutions as well as professional services to clients worldwide.</p>
             <p class="mt-3">What makes us unique is our ability to help clients meet both challenges. We help them enhance productivity by ensuring that vital business functions work faster, cheaper and better. And, our ability to conceptualize, architect and implement new and expanded capabilities allows clients to transform legacy models to take their business to the next level.</p>
           </div>
-          <div class="col-sm-5 fadeInRightSmall animated">
+          <div class="col-lg-5 fadeInRightSmall animated col-sm-12 order-1 order-sm-12">
             <div class="pl_100"><img src="images/erp.jpg" class="img-fluid"></div>
           </div>
         </div>
@@ -79,17 +81,73 @@
         </div>
       </div>      
     </section>
+    <section class="bg-gray-1">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="primary-color text-center">Pricing</h2>
+          </div>
+        </div>
+          <div class="mt-5 mb-3 text-center">
+            <div class="row">
+            <div class="col-sm-4">
+              <div class="card mb-4 shadow">
+                <div class="card-header current">
+                  <h4 class="my-0 font-weight-normal">TRIAL VERSION</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">₹0 <small class="text-muted">/ 60 Days</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>We will be able to coordinate a breakthrough radio advertising, aimed at your target audience!</li>
+                  </ul>
+                  <button type="button" class="button button-primary button-circle fadeInUpSmall animated">Sign up</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card mb-4 shadow">
+                <div class="card-header">
+                  <h4 class="my-0 font-weight-normal">ONLINE PLUS</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">₹1200 <small class="text-muted">/ 1 Year</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>We will be able to coordinate a breakthrough radio advertising, aimed at your target audience!</li>
+                  </ul>
+                  <button type="button" class="button button-primary button-circle fadeInUpSmall animated">Sign up</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card mb-4 shadow">
+                <div class="card-header">
+                  <h4 class="my-0 font-weight-normal">ENTERPRISE</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">₹3000 <small class="text-muted">/ 3 Years</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>We will be able to coordinate a breakthrough radio advertising, aimed at your target audience!</li>
+                  </ul>
+                  <button type="button" class="button button-primary button-circle fadeInUpSmall animated">Sign up</button>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Business Account End -->
     <section class="bg-gray-img-1">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-sm-7 fadeInLeftSmall animated">
+          <div class="col-lg-7 col-sm-12 order-2 order-sm-12 fadeInLeftSmall animated">
             <h2 class="primary-color">Easy to Create Invoice <span>on the Go</span></h2>
             <p class="mt-3">One of the key motivators behind developing Codeit ERP is the challenges we face in-house to manage our finances, generate our bills and to ensure that they are in line with the ever-changing government guidelines. Our Mission is to empower small and medium size business owners to streamline their billing process and focus more on their business rather than understanding complex management software and thus we developed a simple, easy to use billing software which is intuitive and can be used without any formal training.</p>
             <p class="mt-3">Codeit ERP is up to date and is used by business owners and accounts professionals across India to generate and keep a track of their bills.</p>
             <a class="mt-3 button button-primary button-circle fadeInUpSmall animated" href="#">Start Your Free Trial</a>          
           </div>
-          <div class="col-sm-5 fadeInRightSmall animated">
+          <div class="col-lg-5 fadeInRightSmall animated col-sm-12 order-1 order-sm-12">
             <div class="pl_100"><img src="images/erp.jpg" class="img-fluid"></div>
           </div>
         </div>
@@ -291,7 +349,7 @@
                 <div class="col-sm-8">
                   <h2 class="primary-color text-center">Get in <span>Touch</span></h2>
                   <p class="text-center">We welcome you to contact us for more information about any of services. Please fill in the form below.</p>
-                  <div class="contact-field-area mt-5">
+                  <div class="contact-field-area">
                       <form id="ajax-contact" action="contactUs" method="post">
                           <div class="row">
                               <div class="col-sm-6">
@@ -416,16 +474,16 @@
             <p class="footer_p">&copy Codeit ERP 2020 - All Rights Reserved</p>
             <img src="images/siteseal_gd.png" alt="siteseal_gd" class="img_gd">
           </div>
-          <div class="col-sm-3">
-            <h3 class="primary-color mb-3">Company</h3>
+          <div class="col-6 col-sm-3">
+            <h3 class="primary-color">Company</h3>
             <ul class="footer_nav">
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
           </div>
-          <div class="col-sm-3">
-            <h3 class="primary-color mb-3">Quick Links</h3>
+          <div class="col-6 col-sm-3">
+            <h3 class="primary-color">Quick Links</h3>
             <ul class="footer_nav">
                 <li><a href="#faqs">FAQs</a></li>
                 <li><a href="#privacy-policy">Privacy Policy</a></li>
@@ -433,41 +491,51 @@
             </ul>
           </div>
           <div class="col-sm-3">
-            <img src="images/awslogo.png" alt="" class="img-fluid aws_logo">
-            <img src="images/SecurePayments.png" alt="" class="img-fluid">
+            <div class="aws_payment">
+                <img src="images/awslogo.png" alt="" class="img-fluid aws_logo">
+              <img src="images/SecurePayments.png" alt="" class="img-fluid payment_logo">
+            </div>
           </div>
         </div>
       </div>
     </footer>      
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script type="text/javascript">
-    $('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:false,
-    autoplay: true,
-    responsiveClass:true,
-    responsive:{
-        0:{
-            items:1,
-            nav:false
-        },
-        600:{
-            items:1,
-            nav:false
-        },
-        1200:{
-            items:2,
-            loop:false,
-            nav:false
-        }
-    }
-})
+      $('.owl-carousel').owlCarousel({
+          loop:true,
+          margin:10,
+          nav:false,
+          autoplay: true,
+          responsiveClass:true,
+          responsive:{
+              0:{
+                  items:1,
+                  nav:false
+              },
+              600:{
+                  items:1,
+                  nav:false
+              },
+              1200:{
+                  items:2,
+                  loop:false,
+                  nav:false
+              }
+          }
+      })
     </script>
+    <script>
+    $('a').click(function(){
+        $('html, body').animate({
+            scrollTop: $( $(this).attr('href') ).offset().top
+        }, 500);
+        return false;
+    });
+</script>
   </body>
 </html>
 
